# Eclectronics-USB

./: .gitignore  .gitmodules  Interactive_BOM_Main.html  README.md
Eclectronics/: Eclectronics.bak  Eclectronics.kicad_sym
KiCAD_Parts/: 2026-04-15_15-31-19.kicad_sym
RP2350Adev/: #auto_saved_files#  .gitignore  BOM.xlsx  RP2350Adev.kicad_pcb  RP2350Adev.kicad_prl  RP2350Adev.kicad_pro  RP2350Adev.kicad_sch  USB_Mux_Periph.kicad_pro  USB_Mux_Periph.kicad_sch  fp-info-cache  fp-lib-table  main.kicad_pcb  main.kicad_prl  main.kicad_pro  main.kicad_sch  nRF5340.kicad_prl  nRF5340.kicad_pro  nRF5340.kicad_sch  nRF7002.kicad_sch  sym-lib-table  ~RP2350Adev.kicad_sch.lck
rpi-firmware/: CMakeLists.txt  Kconfig  pico-usbip.overlay  prj.conf
rpi-firmware/boards/shields/nrf7002_pico2/: Kconfig.shield  nrf7002_pico2.overlay
rpi-firmware/modules/pico_usbip_host/: CMakeLists.txt  Kconfig
rpi-firmware/modules/pico_usbip_host/dts/bindings/usb/: raspberrypi,rp2-native-usb-uhc.yaml  raspberrypi,rp2350-pio-usb-uhc.yaml
rpi-firmware/modules/pico_usbip_host/include/: pio_usb_zephyr_shim.h  tusb_config.h
rpi-firmware/modules/pico_usbip_host/include/pico/: stdlib.h
rpi-firmware/modules/pico_usbip_host/src/: pio_usb_host_task_stub.c  tinyusb_zephyr_port.c  uhc_rp2350_pio_usb.c  uhc_rp2_native_usb.c
rpi-firmware/modules/pico_usbip_host/zephyr/: module.yml
rpi-firmware/scripts/: build.bat  config.bat  flash.bat  fw.bat  venv.bat  verify_nrf7002_pins.py
rpi-firmware/src/: main.c
rpi-firmware/zephyr/: module.yml
usb_spi/: CMakeLists.txt  README.md  host.py  tusb_config.h  (+2 more)
(+83 files in other folders)
